<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Arena</string>
    <string name="tagline">Your own editor. Trim, caption, brand, done.</string>
    <string name="new_project">New project</string>
    <string name="step_size_title">What\'s this video for?</string>
    <string name="step_video_title">Pick your video</string>
    <string name="step_crop_title">Crop to fit</string>
    <string name="continue_label">Continue</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="ask_watermark_title">Add a watermark?</string>
    <string name="ask_watermark_hint">Shows your name or brand on the video.</string>
    <string name="ask_caption_title">Add a caption?</string>
    <string name="ask_caption_hint">A line of text over the video.</string>
    <string name="ask_sticker_title">Add a sticker?</string>
    <string name="ask_sticker_title_again">Add another sticker?</string>
    <string name="ask_sticker_hint">You can add more than one.</string>
    <string name="no_thanks">No thanks</string>
    <string name="yes_add_one">Yes, add one</string>
    <string name="save_continue">Save &amp; continue</string>
    <string name="export">Export</string>
</resources>
